@@ -4,6 +4,9 @@
   * 支持缓存列表填充验证时重写列表项验证逻辑
   * 支持缓存在 filter 阶段直接返回结果阻止发送请求
 
+- BUG修复模块
+  * 修正 util/cache/list 下 getList/getItem 的 ext 参数回传异常
+
 
 0.3.5   (2016-11-22)
 --------------------------------------------------------
